# cerebro

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  .pre-commit-config.yaml  .spectral.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.runtime  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  TODO.md  buf.gen.yaml  docker-compose.platform.yml  go.mod  go.sum  secrets.txt
.deepsec/: .gitignore  AGENTS.md  README.md  deepsec.config.ts  package.json  pnpm-lock.yaml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
api/: openapi.yaml  spec_embed.go
deploy/: service.yaml
devex/: codegen_catalog.json
docs/: ACTION_ENGINE_ARCHITECTURE.md  AGENT_SDK_AUTOGEN.md  AGENT_SDK_CONTRACTS.json  AGENT_SDK_GATEWAY_ARCHITECTURE.md  AGENT_SDK_PACKAGES_AUTOGEN.md  API_CONTRACTS.json  API_CONTRACTS_AUTOGEN.md  API_REFERENCE.md  ARCHITECTURE.md  CLOUDEVENTS_AUTOGEN.md  CLOUDEVENTS_CONTRACTS.json  CONFIGURATION.md  CONFIG_ENV_VARS.md  CONNECTOR_PROVISIONING_ARCHITECTURE.md  CONNECTOR_PROVISIONING_AUTOGEN.md  CONNECTOR_PROVISIONING_CATALOG.json  DEVELOPMENT.md  DEVEX_CODEGEN_AUTOGEN.md  DEVEX_CODEGEN_CATALOG.json  FILESYSTEM_ANALYZER_ARCHITECTURE.md  FINDINGS_PLATFORM_ARCHITECTURE.md  FUNCTION_SCAN_ARCHITECTURE.md  GRAPH_ASSET_DEEPENING_RESEARCH.md  GRAPH_BACKEND_BENCHMARKS.md  (+27 more)
infra/: main.tf
sdk/python/: pyproject.toml
sdk/python/cerebro_sdk/: __init__.py  client.py  jira.py
sdk/python/cerebro_sdk/_tests/: test_ensure_runtime.py
sdk/python/examples/: jira_onboarding.py  jira_posture_onboarding.py
sdk/python/tests/: test_jira.py
(+2499 files in other folders)
