[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro-sdk"
version = "0.1.0"
description = "Generated Python SDK for the Cerebro Agent SDK and report runtime"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["cerebro_sdk*"]
